--- a/AndroidAdvancedProgram/build.gradle
+++ b/AndroidAdvancedProgram/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    apply from : 'versions.gradle'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        
-
+        classpath deps.android_gradle_plugin
+        classpath deps.kotlin.plugin
+        classpath deps.butterknife_plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +20,10 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0,'minutes'
 }
 
 task clean(type: Delete) {
